GNOME Bugzilla – Bug 731775
network: fix invalid GSettings path
Last modified: 2014-06-17 15:56:11 UTC
GSettings/dconf paths must end with a slash.
Created attachment 278585 [details] [review] network: fix invalid GSettings path
Review of attachment 278585 [details] [review]: indeed
Attachment 278585 [details] pushed as 3985752 - network: fix invalid GSettings path