network: fix invalid GSettings path

GSettings/dconf paths must end with a slash.

https://bugzilla.gnome.org/show_bug.cgi?id=731775